# pathlib_google

./: README.md  pyproject.toml  setup.py
pathlib_vfs/google/: __init__.py  __main__.py  drive.py
